--- a/Anatomy in gynaecology.css
+++ b/Anatomy in gynaecology.css
@@ -1,11 +1,11 @@
 body{
     width: 100%;
     height: 100%;
-    background: rgb(137, 241, 241);
+    background: rgb(125, 199, 193);
 }
 
 .head{
-    color: rgb(252, 15, 105);
+    color: rgb(148, 26, 26);
     display: flex;
     justify-content: center;
     margin: 30px;
@@ -23,15 +23,15 @@ body{
     color: black;
     font-size: 25px;
     border: 1px,rgb(0, 0, 0),solid;
-    width: 60% ;
+    width: 40% ;
     
 }
 .img{
     border: 1px,black,solid;
     
-    width: 40%;
+    width: 60%;
 }
 img{
     width: 100%;
-    height: 100%;
+    height: auto
 }
